--- a/6.JavaScript/4.Loops/dom/LoopsHomework/LoopsHomework/4.index.html
+++ b/6.JavaScript/4.Loops/dom/LoopsHomework/LoopsHomework/4.index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <script src="4.LexSmallestAndLargest.js"></script>
+    <script src="3.FindMinAndMax.js"></script>
 </head>
 <body>
 
