--- a/6.JavaScript/5.Arrays/dom/ArraysHomework/ArraysHomework/test.html
+++ b/6.JavaScript/5.Arrays/dom/ArraysHomework/ArraysHomework/test.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <script src="3.MaximalSequence.js"></script>
+    <script src="6.MostFrequentNumber.js"></script>
+
 </head>
 <body>
 
