--- a/8.JavaScript - UI and DOM/1.DocumentObjectModel/dom/DOM-Homework/DOM-Homework/2.get-input-text-value.html
+++ b/8.JavaScript - UI and DOM/1.DocumentObjectModel/dom/DOM-Homework/DOM-Homework/2.get-input-text-value.html
@@ -8,6 +8,7 @@
     <input id="input" type="text" name="text" placeholder="value of the input here" />
     <button id="getValBtn">Get Value</button>
     <div id="result"></div>
+    <div>git test</div>
     <script src="scripts/2.get-input-text-value.js"></script>
 </body>
 </html>
